[package]
name = "simple-clangd-gen"
version = "0.1.0"
authors = ["Willem <willem66745@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
globset = "0.4"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
